# cisv

./: .dockerignore  .gitignore  .npmignore  BENCHMARKS.md  BENCHMARKS_CLI.md  BENCHMARKS_NODEJS.md  BENCHMARKS_PHP.md  BENCHMARKS_PYTHON.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SIMD_benchmarks.md  benchmark_cli.sh  benchmark_cli_reader.sh  benchmark_cli_writer.sh  binding.gyp  cisv.c  composer.json  config.m4  debug-addon.js  index.d.ts  install_benchmark_deps.sh  package-lock.json  package.json  php_cisv.h  run_benchmarks.sh  test-1024kb.js  test_select.sh  test_transform.sh  test_transform_leak.js  tsconfig.json  valgrind-node.supp
.github/: SECURITY.md  dependabot.yml
.github/workflows/: benchmark-cli.yml  benchmark-nodejs.yml  benchmark-php.yml  benchmark-python.yml  ci.yml  packagist.yml  php.yml  pypi.yml  python.yml  release-reconciler.yml  release.yml
benchmark/: benchmark.js  benchmark.php
bindings/: README.md
bindings/nodejs/: README.md  binding.gyp  index.d.ts  package-lock.json  package.json
bindings/nodejs/benchmarks/: Dockerfile  README.md  benchmark.js
bindings/nodejs/cisv/: cisv_addon.cc
bindings/nodejs/src/: addon.cc
bindings/nodejs/tests/: basic.test.js
bindings/php/: Makefile  README.md  composer.json  config.m4
bindings/php/benchmarks/: Dockerfile  benchmark.php
bindings/php/scripts/: verify_api.php
bindings/php/src/: cisv_php.c
bindings/php/stubs/: cisv.php
bindings/php/tests/: CisvTest.php
bindings/python/: MANIFEST.in  pyproject.toml  setup.py
bindings/python-nanobind/: CMakeLists.txt  README.md  pyproject.toml
bindings/python-nanobind/benchmarks/: README.md  benchmark.py
bindings/python-nanobind/cisv/: __init__.py  _core.pyi
bindings/python-nanobind/src/: cisv_nanobind.cpp
bindings/python-nanobind/tests/: test_parser.py
bindings/python/cisv/: __init__.py  parser.py
cisv/: cisv_addon.cc  cisv_parser.c  cisv_parser.h  cisv_transformer.c  cisv_transformer.h  cisv_writer.c  win_sys_time.h
cisv/test/: typescript.test.ts
cli/: Makefile
cli/benchmarks/: Dockerfile  README.md  run_benchmark.sh
cli/src/: main.c
core/: CMakeLists.txt  Makefile
core/include/cisv/: parser.h
core/src/: parser.c  transformer.c  writer.c
core/tests/: test_core.c
examples/: transform.js  typescript.ts
fixtures/: data.csv  large.csv
include/cisv/: cisv_parser_avx2.h  cisv_parser_avx512.h  cisv_parser_neon.h  cisv_parser_scalar.h  cisv_simd.h
lib/: cisv_transformer.c  cisv_transformer.h
npm/: README.md  benchmark.js  binding.gyp  package-lock.json  package.json
npm/cisv/: cisv_addon.cc
npm/tests/: basic.test.js
scripts/: benchmark_cli.sh  benchmark_cli_writer.sh  benchmark_python.py  generate_test_data.sh  install_benchmark_deps.sh  perf_test_suite.sh  run_all_perf_tests.sh  run_benchmarks.sh  test_cache.sh  test_compiler_flags.sh  test_memory.sh  test_quote_buffer.sh  test_select.sh  test_simd.sh  test_transform.sh
src/: cisv_addon.cc  cisv_parser.c  cisv_parser.h  cisv_simd.h  cisv_transformer.c  cisv_transformer.h  cisv_writer.c  win_getopt.h
src/cli/: main.c
test/: basic.test.js
tests/: basic.test.js  test_native.c
tests/node/: basic.test.js
tests/php/: test_cisv.php
tests/python/: test_cisv.py
types/: cisv.d.ts
